Fix some minor table style / layout issues

--- a/src/style/basic-style.scss
+++ b/src/style/basic-style.scss
@@ -48,35 +48,6 @@ button.cancel:focus {
   background: rgba(0, 0, 0, 0.15);
 }
 
-td:focus {
-  outline: none;
-}
-td:focus > div {
-  transform: scale(1.1);
-  background: white;
-  box-shadow: 0 2px 9px rgba(0, 0, 0, 0.5);
-  z-index: 2;
-}
-td:first-of-type:last-of-type:focus > div {
-  transform: scale(1);
-  left: 1px;
-  right: 1px;
-  position: absolute;
-  top: 0;
-}
-td:first-of-type:focus > div {
-  position: relative;
-  left: 5%;
-}
-td:last-of-type:focus > div {
-  position: relative;
-  right: 5%;
-}
-tr:first-of-type > td > div {
-  position: relative;
-  top: 5%;
-}
-
 @keyframes scale-up-center {
   0% {
     transform: scale(0.75);
